<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/fundo_titulo">

        <TextView
            android:id="@+id/tvdata"
            style="@style/Texto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/tvdata"
            android:textColor="@color/fonte_titulo" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:id="@+id/displayDate"
            android:textColor="@color/fonte_titulo"
            style="@style/Texto" />

    </LinearLayout>

    <Button
        android:id="@+id/pickDate"
        android:text="@string/btcalendario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/Botao"
        android:layout_marginTop="20sp" />

    <TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="20sp"
		android:gravity="center"
		android:text="@string/tvEscolhaData"
        style="@style/Titulo" />

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical" >

            <Button
				android:id="@+id/btn424"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="20sp"
				android:text="@string/escala424"
                style="@style/Botao" />

            <Button
                android:id="@+id/btn4143"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escala4143"
                style="@style/Botao" />

            <Button
                android:id="@+id/btn5261"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/escala5261"
                style="@style/Botao" />

            <Button
				android:id="@+id/btn42410"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/escala42410"
                style="@style/Botao"
                android:visibility="gone" />

			<Button
				android:id="@+id/btn4264"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/escala4264"
                style="@style/Botao"
                android:visibility="gone" />

            <Button
				android:id="@+id/btn6123"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/escala6123"
                style="@style/Botao" />

			<Button
				android:id="@+id/btn6152"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/escala6152"
                style="@style/Botao"
                android:visibility="gone" />

            </LinearLayout>

	</ScrollView>
</LinearLayout>
