<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="25.0dip"
    android:gravity="center"
    android:orientation="vertical" >
    <!--  android:background="@drawable/fundo_splash" -->

    <TextView
        android:id="@+id/nomeapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ff1b00ff"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textColor="#ffffffff"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/versao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ff1b00ff"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:textColor="#ffffffff"
        android:textSize="15sp" />
    
    <TextView
        android:id="@+id/dataatualizacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ff1b00ff"
        android:padding="5dp"
        android:layout_marginTop="5dp"
        android:textColor="#ffffffff"
        android:textSize="12sp" 
        android:text="@string/dataAtualizacao"/>

    <ImageView
        android:id="@+id/simbolo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/logo_metro"
        android:src="@drawable/logo_metro" />

</LinearLayout>