<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo_tela"
    android:orientation="vertical" >

    <LinearLayout style="@style/EstiloLayout" >

        <TextView
            style="@style/Titulo"
            android:text="@string/escala5261" />
    </LinearLayout>

    <ScrollView style="@style/EstiloLayoutMM" >

        <LinearLayout style="@style/EstiloLayoutMM" >

            <LinearLayout style="@style/EstiloLayoutHorizontal" >

                <TextView
                    style="@style/TextoTrem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/escala5261tvdiadasemana" />

                <TextView
                    style="@style/TextoTrem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/escala5261posicao" />
            </LinearLayout>

            <LinearLayout
                style="@style/EstiloLayoutHorizontal"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/tvdiadasemana"
                    style="@style/Texto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/tvposicao"
                    style="@style/Texto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>